force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/CEPARC__DataArchiva_App_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DataArchiva App Setting</label>
</CustomObject>