force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Archive_Field_History__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Archive_Field_History__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, user will be able to archive field history records.</description>
    <inlineHelpText>If checked, user will be able to archive field history records.</inlineHelpText>
    <label>Archive Field History?</label>
    <type>Checkbox</type>
</CustomField>