force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Can_Archive__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Can_Archive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, user will be able to archive records.</description>
    <inlineHelpText>If checked, user will be able to archive records.</inlineHelpText>
    <label>Can Archive?</label>
    <type>Checkbox</type>
</CustomField>