force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Can_Delete__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Can_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, user will be able to delete the archived records.</description>
    <inlineHelpText>If checked, user will be able to delete the archived records.</inlineHelpText>
    <label>Can Delete?</label>
    <type>Checkbox</type>
</CustomField>