force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Detail_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Detail_Page_Name__c</fullName>
    <defaultValue>&apos;CEPARC__DataArchivaDetailPage&apos;</defaultValue>
    <description>If you&apos;ve custom detail page to preview the archived records, please enter name of the page to overwrite the DataArchiva&apos;s default detail page.</description>
    <inlineHelpText>If you&apos;ve custom detail page to preview the archived records, please enter name of the page to overwrite the DataArchiva&apos;s default detail page.</inlineHelpText>
    <label>Detail Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>