force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Purge_Files_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Purge_Files_Batch_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Purge Files Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>