force-app/main/default/objects/CEPARC__DataArchiva_App_Setting__c/fields/CEPARC__Subscribed_To_Archive_Summary_Email__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Subscribed_To_Archive_Summary_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, you&apos;ll receive archive summary email whenever archive job completes successfully.</description>
    <inlineHelpText>If checked, you&apos;ll receive archive summary email whenever archive job completes successfully.</inlineHelpText>
    <label>Subscribed To Archive Summary Email?</label>
    <type>Checkbox</type>
</CustomField>